FIX SPACING

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,3 @@
-.menu-container{margin-top:32px; margin-bottom:32px; margin-left: 16px; margin-right:16px;}
 .paragraph{margin-top:16px;}
 .headlineText{flex: 1 1 226px;}
 .summary{font-weight: 900;}
