--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,26 +107,26 @@ h2{font-size: 26px; margin-bottom:36px;}
 
 .grid-container{
   display:flex;
-  margin-top:16px;
-  margin-bottom:16px;
+  margin-top:32px;
+  margin-bottom:32px;
   flex-direction:column;
   align-items:center;
-  &.videos{margin-top:0px; margin-bottom:0px; &:last-child{margin-bottom:32px;}}
+  &.videos{margin-top:32px; margin-bottom:0px; &:last-child{margin-bottom:32px;}}
   &.intro{margin-bottom:0px;}
-  &.video-text{margin:0px;}
+  &.video-text{margin-top: 32px;}
 }
 .words{
   width: 400px;
   font-size:12px;
-  margin: 16px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
   text-align:justify;
   &:last-of-type{margin-bottom:0px;}
   &.intro{margin-top: 0px;}
   h2{margin-bottom:16px;}
 }
 .quote{font-style:italic;}
-.image-desc{text-align:center; font-style:italic; margin-top:30px; margin-bottom:30px;}
-.image-desc-1{text-align:center; font-style:italic; margin-bottom:16px;}
+.image-desc{text-align:center; font-style:italic; margin-bottom:36px;}
+.image-desc-1{text-align:center; font-style:italic; margin-bottom:32px;}
 
 .cover-image{
   width:100%;
